Fix illegible subgroup heading color

--- a/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
+++ b/solution/ui/regulations/css/scss/partials/_sidebar_left.scss
@@ -12,7 +12,7 @@ $toc_toggles_width: 64px;
 
 aside.left-sidebar {
     box-sizing: unset;
-    color: $reverse_text_color;
+    /*color: $reverse_text_color;*/
     height: calc(100vh - #{$header-height});
     overflow-y: scroll;
     position: sticky;
